tests/testcases/invalid/semantic/58_incomplete_class_member.ciel
// Test: Incomplete type used as class data member
// Expected: Error - incomplete type cannot be used as class member

struct ForwardDeclaredStruct;

class Container {
    private:
        struct ForwardDeclaredStruct member;
};
